# everpublich

./: .gitignore  .stylelintrc.json  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  sonar-project.properties
.github/workflows/: ci.yml
assets/zola/: search.js  search.min.js  stl-viewer.js  stl-viewer.min.js  style.css  style.min.css  three-model-viewer.js  three-model-viewer.min.js
infra/: .terraform.lock.hcl  cloud-init.yaml.tftpl  main.tf  outputs.tf  sqlite-schema.sql  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build-lambda.sh  build_pages.py  deploy.sh  embed_readme.py  minify-html.mjs  show-logs.sh  update-code.sh
src/: admin.rs  auth.rs  crypto.rs  enml.rs  evernote.rs  evernote_api.rs  evernote_cache.rs  github.rs  lambda_app.rs  lib.rs  models.rs  site_output.rs  slug.rs  store.rs  widgets.rs  zola.rs
tests/: e2e_zola.rs  test_build_pages.py
web/: admin.html  admin.js  admin.min.js  app.css  app.min.css  index.html  landing.js  pay.htm  pricing.html  readme-embed.html
