[package]
name = "everpublich"
version = "0.1.8"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "everpublich"
path = "src/lib.rs"

[[bin]]
name = "everpublich-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "everpublich-lambda"
path = "src/bin/lambda.rs"

[[bin]]
name = "everpublich-worker"
path = "src/bin/worker.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
hmac = "0.12"
html-escape = "0.2"
lambda_http = "1.2"
lambda_runtime = "1.2"
percent-encoding = "2.3"
quick-xml = "0.39"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
pretty_assertions = "1"
