[package]
name = "everpublich"
version = "0.6.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "everpublich"
path = "src/lib.rs"

[[bin]]
name = "everpublich-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
evernote_edam = { package = "evernote", version = "0.1.2" }
hmac = "0.12"
html-escape = "0.2"
percent-encoding = "2.3"
quick-xml = "0.39"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3"
thrift = "0.17"
url = "2"
yrs = "0.27"

[dev-dependencies]
pretty_assertions = "1"
